Signed-off-by: Katsuki Shuto <stk2k@sazysoft.com>

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Stk2k\\PowerPdo\\": "src/"
+      "Stk2k\\PowerPDO\\": "src/"
     }
   },
   "autoload-dev": {
